cmake (2.8.3-2) UNRELEASED; urgency=low

  [ Kai Wasserbäch ]
  * debian/source/local-options: Added "unapply-patches".
  * debian/watch: Added git-import-orig invocation.
  * debian/gbp.conf: Added, to ensure we use pristine-tar.
  * debian/patches/FindTCL_fix_#600245.diff: Added. (Closes: #600245)

  [ Modestas Vainius ]
  * Install cmake documentation into /usr/share/doc/cmake-doc/ (LP: #669197).

 -- Kai Wasserbäch <debian@carbon-project.org>  Fri, 27 Nov 2010 10:41:10 +0100

cmake (2.8.3-1) experimental; urgency=low

  * New upstream release.

  [ Kai Wasserbäch ]
  * debian/patches/fix_spelling_errors.patch: Added Applied-Upstream header.
  * debian/control: Bumped Standards-Version to 3.9.1, no further changes
    needed.

  [ Modestas Vainius ]
  * Drop patches which were merged upstream:
    - debian/patches/hurd_platform.diff;
    - FindGTK2_pangommconfig.diff;
    - FindJNI_fix_libarch_determination.diff;
    - cpack_installed_size.diff;
    - add_libarchive_script.patch - better version merged upstream;
    - fix-CTestTestFailedSubmit-xmlrpc.diff;
    - fix_spelling_errors.patch.
  * Adapt FindPython_fix_#569321_and_#580503.diff patch to upstream changes.
  * Bump libarchive-dev Build-Depends to 2.8.0. cmake needs symbols which
    appeared in that version. (Closes: #595275)
  * Add fixup_manpages.diff patch to fix small issues with cmake mangpages
    (found by lintian).

 -- Modestas Vainius <modax@debian.org>  Sat, 13 Nov 2010 02:16:34 +0200

cmake (2.8.2-2) unstable; urgency=low

  [ Kai Wasserbäch ]
  * debian/control:
    - Added libarchive-dev to Build-Depends.
    - Don't {,B-}D on procps on Hurd, already provided by hurd.
    - Added Homepage field (fixes no-homepage-field).
    - Added new binary package cmake-doc and moved all additional
      documentation there (registered with doc-base now).
  * debian/rules: Use system libarchive.
  * debian/patches:
    - add_libarchive_script.patch: Added to allow building with the system's