@@ -3,8 +3,8 @@ Title: Documentation of the Qt GUI for CMake
 Section: Programming
 
 Format: HTML
-Index: /usr/share/doc/cmake-doc/cmake-gui.html
-Files: /usr/share/doc/cmake-doc/cmake-gui.html
+Index: /usr/share/doc/cmake/cmake-gui.html
+Files: /usr/share/doc/cmake/cmake-gui.html
 
 Format: Text
-Files: /usr/share/doc/cmake-doc/cmake-gui.txt.gz
+Files: /usr/share/doc/cmake/cmake-gui.txt.gz
