@@ -3,8 +3,8 @@ Title: Reference of available CMake modules
 Section: Programming
 
 Format: HTML
-Index: /usr/share/doc/cmake-doc/cmake-modules.html
-Files: /usr/share/doc/cmake-doc/cmake-modules.html
+Index: /usr/share/doc/cmake/cmake-modules.html
+Files: /usr/share/doc/cmake/cmake-modules.html
 
 Format: Text
-Files: /usr/share/doc/cmake-doc/cmake-modules.txt.gz
+Files: /usr/share/doc/cmake/cmake-modules.txt.gz
