@@ -3,8 +3,8 @@ Title: Reference of the packaging driver provided by CMake.
 Section: Programming
 
 Format: HTML
-Index: /usr/share/doc/cmake-doc/cpack.html
-Files: /usr/share/doc/cmake-doc/cpack.html
+Index: /usr/share/doc/cmake/cpack.html
+Files: /usr/share/doc/cmake/cpack.html
 
 Format: Text
-Files: /usr/share/doc/cmake-doc/cpack.txt.gz
+Files: /usr/share/doc/cmake/cpack.txt.gz
