@@ -1,3 +1,3 @@
-usr/share/doc/cmake/*.html usr/share/doc/cmake-doc/
-usr/share/doc/cmake/*.txt usr/share/doc/cmake-doc/
-usr/share/doc/cmake/*.docbook usr/share/doc/cmake-doc/
+usr/share/doc/cmake/*.html usr/share/doc/cmake/
+usr/share/doc/cmake/*.txt usr/share/doc/cmake/
+usr/share/doc/cmake/*.docbook usr/share/doc/cmake/
