@@ -7,7 +7,9 @@ cmake (2.8.3-2) UNRELEASED; urgency=low
   * debian/patches/FindTCL_fix_#600245.diff: Added. (Closes: #600245)
 
   [ Modestas Vainius ]
-  * Install cmake documentation into /usr/share/doc/cmake-doc/ (LP: #669197).
+  * Install cmake documentation into /usr/share/doc/cmake/ and link doc
+    directories of the rest binary packages to it (needs debhelper 7.4.2).
+    (LP: #669197)
 
  -- Kai Wasserbäch <debian@carbon-project.org>  Fri, 27 Nov 2010 10:41:10 +0100
 
